--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -61,17 +62,16 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
     //Run time permission
-
     implementation 'com.karumi:dexter:6.2.1'
 
     //android places
     implementation 'com.google.android.libraries.places:places:2.3.0'
 
+    // swipe referesh layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-
 
 
 }
